# arguenaut

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
arguenaut/: __init__.py  config.py  live.py  pipeline.py  utils.py
arguenaut/analysis/: __init__.py  cache.py  filtering.py  pca.py  scoring.py
arguenaut/app/: data_layer.py  lambda_client.py  lambda_server.py  live_cache.py  main.py
arguenaut/app/pages/: 1_Axis_Browser.py  2_Space_Overview.py  3_About.py
arguenaut/cloud/: __init__.py  auto_shutdown.py  bootstrap.sh  lambda_api.py  provisioner.py  ssh.py  state.py  tunnel.py
arguenaut/extraction/: __init__.py  activations.py  layer_meta.py  remote.py
arguenaut/generation/: __init__.py  perspectives.py
arguenaut/labeling/: __init__.py  axis_labeler.py
arguenaut/scripts/: extract.py  label_axes.py  lambda_ctl.py  run_pca.py  validate_pipeline.py
arguenaut/storage/: __init__.py  db.py  h5.py
data/: .lambda-state.json  hypotheses.json
tests/: test_cloud.py  test_generation_parsing.py  test_pca.py  test_storage.py  test_utils.py
